test/e2e/pass/basic/string_concat.cst
fn main() {
    let hello = "Hello, ";
    let world = "World!";
    let result = str_concat(hello, world);

    println(result);
    str_free(result);
}
