test/e2e/fail_compile/type_errors/undefined_variable.cst
fn main() {
    let x = undefined_variable;
    println("This should not compile");
}
